Revision history for Perl extension Text-Markup.

0.19
     - Fixed Pod markup so that it does not strip text from the first line of
       verbatim blocks.

0.18  2013-06-08T23:24:09Z
     - Now require HTML::Tagset, since Text::MediawikiFormat seems to need it
       but only recommends it.
     - Removed all Pod tests from the distribution.
     - Updated reST to support docutils 0.7 - 0.10 and when Pygments is not
       available. Daniele Varrazzo.

0.17  2012-02-28T04:31:07Z
     - Added Asciidoc support.

0.16  2012-02-13T17:23:00Z
     - Rest support now uses its own implementation of `rst2html` so that it
       can render specialized reST documents, such as Sphinx files, in a more
       forgiving way: it preserves the content of unknown directives while not
       emulating specialized rendering. Written by Daniele Varrazzo.
     - Improved handling of Sphinx directives in Rest output. Most directives
       are stripped out, although `function` directives now turn out much
       nicer. Props to Daniele Varrazzo for the work on the Rest parser.
     - Fixed character encoding issues with the Rest parser.
     - Fixed a character encoding issue in the test suite.

0.15  2012-01-13T23:04:16Z
      - Changed the parsers to return `undef` if no content was parsed from a
        file.
      - Added reST support, with thanks to Daniele Varrazzo.

0.14  2011-10-09T17:45:28Z
      - Added option processing to the Pod parser. Thanks to Mark Allen for
        the pull request.

0.13  2011-05-21T15:33:28
      - Fixed broken regular expression in the Pod parser that could eat the
        first line of a verbatim block.

0.12  2011-04-04T23:16:12
      - Documented that the `file` parameter to `parse()` is required.
      - Added MultiMarkdown support.
      - Fixed test failure in `t/formats.t` when no supported markup parser is
        installed.

0.11  2011-02-22T22:41:15
      - Added list of supported markups to the README.