@@ -51,9 +51,10 @@ FIND: {
 }
 
 # Arguments to pass to asciidoc.
+# Restore --safe if Asciidoc ever fixes it with the XHTML back end.
+# https://groups.google.com/forum/#!topic/asciidoc/yEr5PqHm4-o
 my @OPTIONS = qw(
     --no-header-footer
-    --safe
     --out-file -
     --attribute newline=\\n
 );
@@ -123,9 +124,9 @@ Text::Markup::Asciidoc - reStructuredText parser for Text::Markup
 
 This is the L<Asciidoc|http://www.methods.co.nz/asciidoc/> parser for
 L<Text::Markup>. It depends on the C<asciidoc> command-line application, for
-which there are many L<binary
-distributions|http://www.methods.co.nz/asciidoc/INSTALL.html>. It recognizes
-files with the following extensions as Asciidoc:
+which there are many
+L<binary distributions|http://www.methods.co.nz/asciidoc/INSTALL.html>. It
+recognizes files with the following extensions as Asciidoc:
 
 =over
 
