@@ -3,6 +3,8 @@ Revision history for Perl extension Text-Markup.
 0.19
      - Fixed Pod markup so that it does not strip text from the first line of
        verbatim blocks.
+     - Removed the `--safe` option from Asciidoc. It is just borked with the
+       XHTML back end.
 
 0.18  2013-06-08T23:24:09Z
      - Now require HTML::Tagset, since Text::MediawikiFormat seems to need it
